@@ -14,6 +14,9 @@ ddetect (1.16) UNRELEASED; urgency=low
     - Turn seen flag setting back on after trying to ask the pcmcia start
       question, now that #257180 is fixed. Add a dependency on the version of
       cdebconf that fixed it. Closes: #280025
+    - Revert change to force load sunhme, sunbmac, and esp, since a discover1
+      patch exists (thought not yet applied), and the change caused nasty
+      error messages during the install.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 20:47:21 +0100
 
